<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:background="@color/toolbar_background"
        android:layout_height="@dimen/navigation_bar_height"
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:textSize="@dimen/navigation_bar_title_height"
            android:textColor="@color/white"
            android:text="@string/title"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/navigation_bar_button_margin_title"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/Stain"
            android:background="@drawable/custom_background_layout"
            android:orientation="vertical"
            android:layout_width="@dimen/TOP_RIGHT_button_width"
            android:layout_height="@dimen/TOP_RIGHT_button_height"
            android:paddingLeft="@dimen/TOP_RIGHT_button_padding_left"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_Stain"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:textStyle="bold"
                android:text="@string/STAINS"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_StainDes"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:text="@string/STAINS_DES"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ExpressService"
            android:background="@drawable/custom_background_layout"
            android:orientation="vertical"
            android:layout_width="@dimen/TOP_RIGHT_button_width"
            android:layout_height="@dimen/TOP_RIGHT_button_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/TOP_RIGHT_button_padding_left">
            <TextView
                android:id="@+id/tv_ExpressService"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:textStyle="bold"
                android:text="@string/EXPRESS_SERVICE"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_ExpressServiceDes"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:text="@string/EXPRESS_SERVICE_DES"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/PreserenceOfDyingService"
            android:background="@drawable/custom_background_layout"
            android:orientation="vertical"
            android:layout_width="@dimen/TOP_RIGHT_button_width"
            android:layout_height="@dimen/TOP_RIGHT_button_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/TOP_RIGHT_button_padding_left">
            <TextView
                android:id="@+id/tv_PreserenceOfDyingService"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:textStyle="bold"
                android:text="@string/PRESERENCE_OF_DYING_SERVICE"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_PreserenceOfDyingService_Des"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:text="@string/PRESERENCE_OF_DYING_SERVICE_DES"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ExpressService"
            android:background="@drawable/custom_background_layout"
            android:orientation="vertical"
            android:layout_width="@dimen/TOP_RIGHT_button_width"
            android:layout_height="@dimen/TOP_RIGHT_button_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/TOP_RIGHT_button_padding_left">
            <TextView
                android:id="@+id/tv_PressingOnly"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:textStyle="bold"
                android:text="@string/PRESSING_ONLY"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_PressingOnlyDes"
                android:textSize="@dimen/TOP_RIGHT_button_title_height"
                android:text="@string/PRESSING_ONLY_DES"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        style="@style/MyMaterialTheme"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_bar_height"
        app:tabMode="fixed"
        app:tabTextColor="@color/toolbar_background"
        app:tabSelectedTextColor="@color/white"
        app:tabGravity="fill"/>

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--style="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
        <!---->
    <!--</android.support.design.widget.AppBarLayout>-->


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
</LinearLayout>